# inkomstprognos

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  codecov.yml  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
.reuse/: dep5
docs/: about.md  accessibility.md  api.md  citation.md  data.md  deviations.md  dpia-summary.md  eu-compliance.md  fair4rs.md  gdpr.md  glossary.md  governance.md  index.md  methodology.md  osor.md  reproducibility.md  swedish-legal-basis.md
examples/: synthetic.toml
scripts/: check_line_length.py  make_synthetic_fixture.py  validate_lockfile.py
src/inkomstprognos/: __init__.py  cli.py  config.py  logging.py  paths.py  seeds.py
src/inkomstprognos/evaluation/: __init__.py  calibration.py  metrics.py  rolling_origin.py
src/inkomstprognos/features/: __init__.py  cross_fitted_encoders.py  lifecycle.py  macro_join.py
src/inkomstprognos/ingestion/: __init__.py  eurostat.py  lisa.py  manifest.py  tax_registers.py
src/inkomstprognos/models/: __init__.py  conformal.py  ensemble.py  gbm.py  state_space.py
src/inkomstprognos/pipelines/: __init__.py  dag.py  runner.py
src/inkomstprognos/reporting/: __init__.py  figures.py  pdf_a.py  tables.py
tests/: conftest.py  test_cli.py  test_determinism.py  test_evaluation.py  test_features.py  test_ingestion.py  test_models_conformal.py  test_models_gbm.py  test_models_state_space.py  test_pipelines.py  test_reporting.py  test_reuse_compliance.py
