[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "inkomstprognos"
version = "0.1.0"
description = "Probabilistic disposable-income forecasting on Swedish administrative microdata."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "EUPL-1.2" }
authors = [
    { name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundstrom Imanov", email = "olaf.laitinen@su.se" },
]
maintainers = [
    { name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundstrom Imanov", email = "olaf.laitinen@su.se" },
]
keywords = [
    "income forecasting",
    "Sweden",
    "LISA",
    "microsimulation",
    "Bayesian state space",
    "conformal prediction",
    "EUPL-1.2",
    "OSOR",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "numpy>=1.26,<3",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "numpyro>=0.14",
    "jax>=0.4.28",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "typer>=0.12",
    "structlog>=24.1",
    "rich>=13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.5",
    "pytest-randomly>=3.15",
    "pytest-benchmark>=4",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "nox>=2024.4.15",
    "reuse>=4",
    "pip-audit>=2.7",
    "bandit>=1.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mike>=2",
]
bench = [
    "pytest-benchmark>=4",
]

[project.scripts]
inkomstprognos = "inkomstprognos.cli:main"

[project.urls]
Homepage = "https://github.com/olaflaitinen/inkomstprognos"
Documentation = "https://olaflaitinen.github.io/inkomstprognos"
Repository = "https://github.com/olaflaitinen/inkomstprognos"
Issues = "https://github.com/olaflaitinen/inkomstprognos/issues"
Changelog = "https://github.com/olaflaitinen/inkomstprognos/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/inkomstprognos"]

[tool.hatch.build.targets.sdist]
include = ["src/inkomstprognos", "tests", "README.md", "LICENSE", "NOTICE", "CITATION.cff"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "UP", "SIM", "PL", "S", "A", "COM",
    "PIE", "RET", "TCH", "ARG", "DTZ",
]
ignore = [
    "COM812", "S101", "PLC0415", "B008",
    "TC001", "TC002", "TC003",
    "PLR2004", "PLR0913", "RET504",
    "S311", "B905",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ARG001", "ARG002", "E501"]
"benchmarks/**/*.py" = ["S101"]
"noxfile.py" = ["S603", "S607", "A001"]
"scripts/**/*.py" = ["PLR2004", "PLC0415", "PLW1510", "S603", "S607"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "xgboost.*",
    "numpyro.*",
    "jax.*",
    "jaxlib.*",
    "statsmodels.*",
    "sklearn.*",
    "pyarrow.*",
    "polars.*",
    "hypothesis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "benchmark: marks benchmark tests",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["inkomstprognos"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

[tool.coverage.paths]
source = ["src/inkomstprognos"]
